--- a/src/views/index.html
+++ b/src/views/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>AutoDescripcion</title>
     <link rel="stylesheet" href="../style.css">
+    <script src="../index.js"></script>
 </head>
 <body>
     <div class="navbar">
@@ -12,8 +13,6 @@
             <button class="nav-button">
                 Información
             </button>
-            <!-- <a href="#" class="nav-link">Inicio</a>
-            <a href="#" class="nav-link">Información</a> -->
        </nav>
     </div>
     <main>
@@ -29,8 +28,10 @@
                 acceder a la información visual de un video, a través de una narración que describe lo que
                 ocurre en la pantalla.
             </p>
-            <p>
-                La aplicación permite a los usuarios crear audiodescripciones de sus propios videos, de tres formas:
+            <div class="formas">
+                <p>
+                    La aplicación permite a los usuarios crear audiodescripciones de sus propios videos, de tres formas:
+                </p>
                 <ol>
                     <li>
                         Que el propio usuario grabe su voz en los instantes donde no haya sonido.
@@ -42,7 +43,12 @@
                         Que automáticamente, a partir de un fotograma, se genera la audiodescripción.
                     </li>
                 </ol>
-            </p>
+            </div>
+        </div>
+        <div class="contenedorBoton">
+            <button class="botonR">
+                Comienza a trabajar!
+            </button>
         </div>
     </main>
 </body>
