--- a/src/views/index.html
+++ b/src/views/index.html
@@ -2,15 +2,15 @@
 <head>
     <title>AutoDescripcion</title>
     <link rel="stylesheet" href="../style.css">
-    <script src="../index.js"></script>
+    <script type ="text/script" src="../main.js"></script>
 </head>
 <body>
     <div class="navbar">
        <nav class="nav">
-            <button class="nav-button">
+            <button class="nav-button" id="btnInicio">
                 Inicio
             </button>
-            <button class="nav-button">
+            <button class="nav-button" id="btnInfo">
                 Información
             </button>
        </nav>
@@ -46,10 +46,11 @@
             </div>
         </div>
         <div class="contenedorBoton">
-            <button class="botonR">
+            <button class="botonR" id="btnDescr">
                 Comienza a trabajar!
             </button>
         </div>
+        <div class="ayuda"></div>
     </main>
 </body>
 </html>
