HTML subir fichero

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -10,9 +10,11 @@
             <button class="nav-button" id="btnInicio">
                 Inicio
             </button>
-            <button class="nav-button" id="btnInfo">
-                Información
-            </button>
+            <a href="info.html">
+                <button class="nav-button" id="btnInfo">
+                    Información
+                </button>
+            </a>
        </nav>
     </div>
     <main>
@@ -46,9 +48,11 @@
             </div>
         </div>
         <div class="contenedorBoton">
-            <button class="botonR" id="btnDescr">
-                Comienza a trabajar!
-            </button>
+            <a href="sube_ficheros.html">
+                <button class="botonR" id="btnDescr">
+                    Comienza a trabajar!
+                </button>
+            </a>
         </div>
         <div class="ayuda"></div>
     </main>
