--- a/src/style.css
+++ b/src/style.css
@@ -85,7 +85,8 @@ a {
     cursor: pointer;
 }
 
-.botonR a {
+.botonR{
+    margin-top: 10px;
     color: white;
 }
 
@@ -93,4 +94,22 @@ a {
     background-color: #fff;
     color: salmon;
     border-color: salmon;
+}
+
+.container {
+    text-align: center;
+}
+
+.drag_zone {
+    border: 2px dashed salmon;
+    border-radius: 20px;
+    width: 100%;
+    height: 200px;
+    margin: 20px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    color: #ccc;
+    cursor: move;
 }
