--- a/src/style.css
+++ b/src/style.css
@@ -36,6 +36,7 @@ nav {
 .nav-button:hover {
     background-color: #fff;
     color: salmon;
+    cursor: pointer;
 }
 
 .bloquePrincipal {
@@ -112,4 +113,36 @@ a {
     font-size: 20px;
     color: #ccc;
     cursor: move;
+}
+
+.opcion {
+    text-align: center;
+}
+
+.opcion ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+    display: inline-block;
+}
+
+.opcion li {
+    margin: 10px 0;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.opcion li::before {
+    color: salmon;
+}
+
+.opcion li:hover {
+    background-color: #FFEBE9;
+}
+
+input[type='radio'] {
+    accent-color: salmon;;
 }
