--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,18 +3,17 @@
     <title>AutoDescripcion</title>
     <link rel="stylesheet" href="../style.css">
     <script type ="text/script" src="../main.js"></script>
+    <script src="../js/renderer.js"></script>
 </head>
 <body>
     <div class="navbar">
        <nav class="nav">
-            <button class="nav-button" id="btnInicio">
+            <button class="nav-button boton" id="btnInicio">
                 Inicio
             </button>
-            <a href="info.html">
-                <button class="nav-button" id="btnInfo">
-                    Información
-                </button>
-            </a>
+            <button class="nav-button boton" id="btnInfo">
+                Información
+            </button>
        </nav>
     </div>
     <main>
@@ -48,11 +47,9 @@
             </div>
         </div>
         <div class="contenedorBoton">
-            <a href="sube_ficheros.html">
-                <button class="botonR" id="btnDescr">
-                    Comienza a trabajar!
-                </button>
-            </a>
+            <button class="botonR boton" id="btnDescr">
+                Comienza a trabajar!
+            </button>
         </div>
         <div class="ayuda"></div>
     </main>
