--- a/src/views/sube_ficheros.html
+++ b/src/views/sube_ficheros.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<head>
+<head lang="es">
     <title>AutoDescripcion</title>
     <link rel="stylesheet" href="../style.css">
     <script src="../js/renderer.js"></script>
