Subida de fichero

--- a/src/views/sube_ficheros.html
+++ b/src/views/sube_ficheros.html
@@ -24,7 +24,10 @@
         </div>
         <div class="selecciona">
             <p>O selecciona desde aquí</p>
-            <input type="file" name="file" id="file">
+            <button class="botonS">
+                Seleccionar
+                <label id="fileName"></label>
+            </button>
             
             <p>Elige un modo de funcionamiento:</p>
             <div class="opcion">
