--- a/src/style.css
+++ b/src/style.css
@@ -146,3 +146,12 @@ a {
 input[type='radio'] {
     accent-color: salmon;;
 }
+
+.botonS {
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    display: inline-block;
+}
+
+#fileName {
+    font-family: italica;
+}
