--- a/src/views/sube_ficheros.html
+++ b/src/views/sube_ficheros.html
@@ -3,6 +3,7 @@
     <title>AutoDescripcion</title>
     <link rel="stylesheet" href="../style.css">
     <script src="../js/renderer.js"></script>
+    <script src="../js/ffpmeg.js"></script>
 </head>
 <body>
     <div class="navbar">
