Casi con formulario

--- a/src/views/pantalla_carga.html
+++ b/src/views/pantalla_carga.html
@@ -7,9 +7,9 @@
         <script src="../js/ffpmeg.js"></script>
     </head>
     <body>
-        <h1>Por favor espere, el vídeo está siendo procesado</h1>
-        <div class="progress-bar">
-            <div class="progress-bar-fill"></div>
+        <div class="bloquePrincipal">
+            <h1>Por favor espere, el vídeo está siendo procesado</h1>
+            <div class="spinner"></div>
         </div>
     </body>
 </html>
