--- a/src/style.css
+++ b/src/style.css
@@ -155,3 +155,39 @@ input[type='radio'] {
 #fileName {
     font-family: italica;
 }
+
+.bloquePrincipal h1 {
+    font-size: 30px;
+    margin-top: 70px;
+}
+
+.spinner {
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 8px solid #f3f3f3; /* Borde gris */
+    border-top: 8px solid salmon; /* Borde azul */
+    border-radius: 50%; /* Forma circular */
+    width: 40px; 
+    height: 40px;
+    animation: spin 2s linear infinite; /* Animación */
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); } /* Angulo de inicio */
+    100% { transform: rotate(360deg); } /* Angulo de fin */
+}
+
+@media screen and (max-width: 768px) {
+    .bloquePrincipal {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .spinner {
+        position: static;
+        margin-top: 20px;
+    }
+}
+  
