--- a/src/views/formulario_descripcion.html
+++ b/src/views/formulario_descripcion.html
@@ -23,9 +23,7 @@
             <div class="reproductor">
                 <video id="player" controls></video>
             </div>
-            <div class="form">
-                
-            </div>
+            <div class="form"></div>
         </div>
      </main>
 </body>
