--- a/src/views/formulario_descripcion.html
+++ b/src/views/formulario_descripcion.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.plyr.io/3.7.3/plyr.polyfilled.js"></script>
 </head>
 <body>
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=1mys9qG5"></script>
     <div class="navbar">
         <nav class="nav">
              <button class="nav-button boton" id="btnInicio">
