--- a/src/views/formulario_descripcion.html
+++ b/src/views/formulario_descripcion.html
@@ -6,7 +6,7 @@
     <script src="../js/ffpmeg.js"></script>
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.3/plyr.css" />
     <script src="https://cdn.plyr.io/3.7.3/plyr.polyfilled.js"></script>
-    <!-- <script src="https://code.responsivevoice.org/responsivevoice.js?key=1mys9qG5"></script> -->
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=1mys9qG5"></script>
 </head>
 <body>
     <div class="navbar">
