--- a/src/style.css
+++ b/src/style.css
@@ -63,7 +63,7 @@ a {
     text-decoration: none;
 }
 
-.resaltado a{
+.resaltado a {
     font-style: italic;
     color: black;
 }
@@ -86,7 +86,7 @@ a {
     cursor: pointer;
 }
 
-.botonR{
+.botonR {
     margin-top: 10px;
     color: white;
 }
@@ -144,7 +144,8 @@ a {
 }
 
 input[type='radio'] {
-    accent-color: salmon;;
+    accent-color: salmon;
+    ;
 }
 
 .botonS {
@@ -166,17 +167,29 @@ input[type='radio'] {
     top: 25%;
     left: 50%;
     transform: translate(-50%, -50%);
-    border: 8px solid #f3f3f3; /* Borde gris */
-    border-top: 8px solid salmon; /* Borde azul */
-    border-radius: 50%; /* Forma circular */
-    width: 40px; 
+    border: 8px solid #f3f3f3;
+    /* Borde gris */
+    border-top: 8px solid salmon;
+    /* Borde azul */
+    border-radius: 50%;
+    /* Forma circular */
+    width: 40px;
     height: 40px;
-    animation: spin 2s linear infinite; /* Animación */
+    animation: spin 2s linear infinite;
+    /* Animación */
 }
 
 @keyframes spin {
-    0% { transform: rotate(0deg); } /* Angulo de inicio */
-    100% { transform: rotate(360deg); } /* Angulo de fin */
+    0% {
+        transform: rotate(0deg);
+    }
+
+    /* Angulo de inicio */
+    100% {
+        transform: rotate(360deg);
+    }
+
+    /* Angulo de fin */
 }
 
 @media screen and (max-width: 768px) {
@@ -185,6 +198,7 @@ input[type='radio'] {
         flex-direction: column;
         align-items: center;
     }
+
     .spinner {
         position: static;
         margin-top: 20px;
@@ -204,28 +218,28 @@ input[type='radio'] {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-  }
-  
-  #tablaSilencios th {
+}
+
+#tablaSilencios th {
     background-color: #eee;
     color: #666;
     font-weight: bold;
     padding: 10px;
     text-align: center;
-  }
-  
-  #tablaSilencios td {
+}
+
+#tablaSilencios td {
     padding: 10px;
     border: 1px solid #ccc;
-  }
-  
-  .inputSilencio {
+}
+
+.inputSilencio {
     width: 100%;
     box-sizing: border-box;
     padding: 5px;
     border-radius: 5px;
     border: 1px solid #ccc;
-  }
+}
 
 .btnComprobar {
     float: right;
@@ -234,16 +248,14 @@ input[type='radio'] {
 .divBotones {
     display: flex;
     margin: 0 5px;
-  }
-  
-  .btnComprobar {
+}
+
+.btnComprobar {
     margin-right: 5px;
-  }
-  
-  .spanBotones {
+}
+
+.spanBotones {
     display: flex;
     justify-content: center;
     margin-top: 10px;
-  }
-  
-  
+}
