Borrado parcialmente la grabación

--- a/src/style.css
+++ b/src/style.css
@@ -241,8 +241,21 @@ input[type='radio'] {
     border: 1px solid #ccc;
 }
 
+.btnComprobar {
+    float: right;
+}
 
 .divBotones {
     display: flex;
     margin: 0 5px;
+}
+
+.btnComprobar {
+    margin-right: 5px;
+}
+
+.spanBotones {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
 }
