--- a/src/views/formulario_descripcion.html
+++ b/src/views/formulario_descripcion.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
     <title>AutoDescripcion</title>
     <link rel="stylesheet" href="../style.css">
@@ -6,26 +7,30 @@
     <script src="../js/ffpmeg.js"></script>
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.3/plyr.css" />
     <script src="https://cdn.plyr.io/3.7.3/plyr.polyfilled.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/sweetalert2@9.5.3/dist/sweetalert2.min.css">
+    <script src="https://unpkg.com/sweetalert2@9.5.3/dist/sweetalert2.all.min.js"></script>
     <!-- <script src="https://code.responsivevoice.org/responsivevoice.js?key=1mys9qG5"></script> -->
 </head>
+
 <body>
     <div class="navbar">
         <nav class="nav">
-             <button class="nav-button boton" id="btnInicio">
-                 Inicio
-             </button>
-             <button class="nav-button boton" id="btnInfo">
-                 Información
-             </button>
+            <button class="nav-button boton" id="btnInicio">
+                Inicio
+            </button>
+            <button class="nav-button boton" id="btnInfo">
+                Información
+            </button>
         </nav>
-     </div>
-     <main>
+    </div>
+    <main>
         <div class="bloquePrincipal">
             <div class="reproductor">
                 <video id="player" controls></video>
             </div>
             <div class="form"></div>
         </div>
-     </main>
+    </main>
 </body>
+
 </html>
