Grabacion casi hecha

--- a/src/style.css
+++ b/src/style.css
@@ -86,15 +86,23 @@ a {
     cursor: pointer;
 }
 
-.botonR {
-    margin-top: 10px;
-    color: white;
-}
-
 .botonR:hover {
     background-color: #fff;
     color: salmon;
     border-color: salmon;
+}
+
+.botonR_i {
+    color: salmon;
+    background-color: #fff;
+    border-style: solid;
+    border-color: salmon;
+    padding: 10px 20px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
 }
 
 .container {
