--- a/src/views/formulario_descripcion.html
+++ b/src/views/formulario_descripcion.html
@@ -4,6 +4,7 @@
     <title>AutoDescripcion</title>
     <link rel="stylesheet" href="../style.css">
     <script src="../js/renderer.js"></script>
+    <script src="../js/procesa_grabacion.js"></script>
     <script src="../js/ffpmeg.js"></script>
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.3/plyr.css" />
     <script src="https://cdn.plyr.io/3.7.3/plyr.polyfilled.js"></script>
