--- a/src/views/sube_ficheros.html
+++ b/src/views/sube_ficheros.html
@@ -42,10 +42,10 @@
                         <input type="radio" name="modo" value="2">
                         <label for="modo2">Modo 2: Grabar el contenido</label>
                     </li>
-                    <li>
+                    <!-- <li>
                         <input type="radio" name="modo" value="3">
-                        <label for="modo3">Modo 3: Gerenación automática de la descripción</label>
-                    </li>
+                        <label for="modo3">Configuración</label>
+                    </li> -->
                 </ul>
             </div>
             <button class="botonR">
