--- a/src/views/sube_ficheros.html
+++ b/src/views/sube_ficheros.html
@@ -42,10 +42,9 @@
                         <input type="radio" name="modo" value="2">
                         <label for="modo2">Modo 2: Grabar el contenido</label>
                     </li>
-                    <!-- <li>
-                        <input type="radio" name="modo" value="3">
-                        <label for="modo3">Configuración</label>
-                    </li> -->
+                    <li id="btnConf">
+                        Configuración
+                    </li>
                 </ul>
             </div>
             <button class="botonR">
