--- a/src/views/formulario_descripcion.html
+++ b/src/views/formulario_descripcion.html
@@ -2,10 +2,11 @@
 
 <head>
     <title>AutoDescripcion</title>
-    <link rel="stylesheet" href="../style.css">
     <script src="../js/renderer.js"></script>
-    <script type="module" src="../js/procesa_grabacion.js"></script>
-    <script type="module" src="../js/ffpmeg.js"></script>
+    <script src="../js/configurar.js"></script>
+    <script src="../js/ffpmeg.js"></script>
+    <script src="../js/procesa_grabacion.js"></script>
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.3/plyr.css" />
     <script src="https://cdn.plyr.io/3.7.3/plyr.polyfilled.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/sweetalert2@9.5.3/dist/sweetalert2.min.css">
