--- a/src/views/sube_ficheros.html
+++ b/src/views/sube_ficheros.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <head lang="es">
     <title>AutoDescripcion</title>
-    <link rel="stylesheet" href="../style.css">
     <script src="../js/renderer.js"></script>
+    <script src="../js/configurar.js"></script>
     <script src="../js/ffpmeg.js"></script>
+    <link rel="stylesheet" href="../style.css">
+    <script src="https://unpkg.com/sweetalert2@9.5.3/dist/sweetalert2.all.min.js"></script>
 </head>
 <body>
     <div class="navbar">
@@ -47,9 +49,6 @@
                     </li>
                 </ul>
             </div>
-            <button class="botonR">
-                Describe!
-            </button>
         </div>
      </div>
 </body>
