--- a/src/style.css
+++ b/src/style.css
@@ -86,6 +86,15 @@ a {
     cursor: pointer;
 }
 
+.divPrueba {
+    margin-top: 30px 10px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
 .btnPlay {
     font-size: 14px;
 }
@@ -166,6 +175,7 @@ a {
 .configuraciones {
     margin-top: 10px;
     text-align: center;
+    align-items: center;
 }
 
 #threshold_value {
@@ -174,6 +184,38 @@ a {
     border: 1px solid #ccc;
     border-radius: 10px;
     cursor: pointer;
+}
+
+hr {
+    margin: 20px 0;
+}
+
+#liVoces {
+    display: block;
+}
+
+.configuraciones span {
+    display: block;
+}
+
+.configuraciones .voces li {
+    text-align: center;
+}
+
+/* .inputSilencio {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+} */
+
+.inputPrueba {
+    width: 15%;
+    box-sizing: border-box;
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
 }
 
 input[type='radio'] {
