--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,6 +3,9 @@
     <title>AutoDescripcion</title>
     <link rel="stylesheet" href="../style.css">
     <script src="../js/renderer.js"></script>
+    <script src="../js/configurar.js"></script>
+    <script src="../js/ffpmeg.js"></script>
+    <script src="../js/procesa_grabacion.js"></script>
 </head>
 <body>
     <div class="navbar">
