--- a/src/views/index.html
+++ b/src/views/index.html
@@ -33,19 +33,25 @@
             </p>
             <div class="formas">
                 <p>
-                    La aplicación permite a los usuarios crear audiodescripciones de sus propios videos, de tres formas:
+                    La aplicación permite a los usuarios crear audiodescripciones de sus propios videos, de dos formas:
                 </p>
                 <ol>
-                    <li>
-                        Que el propio usuario grabe su voz en los instantes donde no haya sonido.
-                    </li>
                     <li>
                         Rellenar un formulario con el texto que se quiera utilizar y que un reproductor de audio lo añada al vídeo.
                     </li>
                     <li>
-                        Que automáticamente, a partir de un fotograma, se genera la audiodescripción.
+                        Que el propio usuario grabe su voz en los instantes donde no haya sonido.
                     </li>
                 </ol>
+                <!-- <p>
+                    ¿Cómo se utiliza?
+                    <ol>
+                        <li>
+                            Sube un archivo de video a la plataforma.
+                            <img src="../assets/subida_ficheros.PNG" alt="Subir archivo">
+                        </li>
+                    </ol>
+                </p> -->
             </div>
         </div>
         <div class="contenedorBoton">
