--- a/src/views/formulario_descripcion.html
+++ b/src/views/formulario_descripcion.html
@@ -6,6 +6,8 @@
     <script src="../js/configurar.js"></script>
     <script src="../js/ffpmeg.js"></script>
     <script src="../js/procesa_grabacion.js"></script>
+    <script src="../js/procesa_sintesis.js"></script>
+    <script src="../js/SpeechSynthesisRecorder.js"></script>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.3/plyr.css" />
     <script src="https://cdn.plyr.io/3.7.3/plyr.polyfilled.js"></script>
