--- a/src/views/configuracion.html
+++ b/src/views/configuracion.html
@@ -45,14 +45,11 @@
                 </div>
                 <hr>
                 <div class="voces">
-                    <h1>Voces</h1>
+                    <h1>Voces disponibles</h1>
                     <div class="opcion">
                         <ul>
-                            <li id="idioma">
-                                <span>Idioma</span>
-                            </li>
                             <li id="liVoces">
-                                <span>Voces</span>
+                                <span>Cargando voces</span>
                             </li>
                         </ul>
                     </div>
