--- a/src/views/sube_ficheros.html
+++ b/src/views/sube_ficheros.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <head lang="es">
     <title>AutoDescripcion</title>
-    <script src="../js/renderer.js"></script>
-    <script src="../js/configurar.js"></script>
-    <script src="../js/ffpmeg.js"></script>
+    <script src="../js/renderer.js" type="module"></script>
     <link rel="stylesheet" href="../style.css">
     <script src="https://unpkg.com/sweetalert2@9.5.3/dist/sweetalert2.all.min.js"></script>
 </head>
