--- a/src/views/configuracion.html
+++ b/src/views/configuracion.html
@@ -2,10 +2,10 @@
 
 <head>
     <title>AutoDescripcion</title>
-    <script src="../js/renderer.js"></script>
-    <script src="../js/configurar.js"></script>
-    <script src="../js/ffpmeg.js"></script>
-    <script src="../js/procesa_grabacion.js"></script>
+    <script src="../js/renderer.js" type="module"></script>
+    <script src="../js/configurar.js" type="module"></script>
+    <script src="../js/ffpmeg.js" type="module"></script>
+    <script src="../js/procesa_grabacion.js" type="module"></script>
     <link rel="stylesheet" href="../style.css">
     <script src="https://unpkg.com/sweetalert2@9.5.3/dist/sweetalert2.all.min.js"></script>
 </head>
