--- a/src/views/formulario_descripcion.html
+++ b/src/views/formulario_descripcion.html
@@ -3,11 +3,8 @@
 <head>
     <title>AutoDescripcion</title>
     <script src="../js/renderer.js"></script>
-    <script src="../js/configurar.js"></script>
-    <script src="../js/ffpmeg.js"></script>
     <script src="../js/procesa_grabacion.js"></script>
-    <script src="../js/procesa_sintesis.js"></script>
-    <script src="../js/SpeechSynthesisRecorder.js"></script>
+    <script src="../js/procesa_sintesis.js" ></script>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.3/plyr.css" />
     <script src="https://cdn.plyr.io/3.7.3/plyr.polyfilled.js"></script>
@@ -30,8 +27,8 @@
     <main>
         <div class="bloquePrincipal">
             <div class="reproductor">
-                <video id="player" controls></video>
-            </div>
+                <video controls class="custom-player"></video>
+            </div>            
             <div class="form"></div>
         </div>
     </main>
