--- a/src/views/pagina_descarga.html
+++ b/src/views/pagina_descarga.html
@@ -3,8 +3,9 @@
 <head>
     <title>AutoDescripcion</title>
     <script src="../js/renderer.js"></script>
-    <script src="../js/procesa_grabacion.js"></script>
-    <script src="../js/procesa_sintesis.js"></script>
+    <script src="../js/procesa_grabacion.js" type="module"></script>
+    <script src="../js/procesa_sintesis.js" type="module"></script>
+    <script src="../js/descarga.js" type="module"></script>    
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.3/plyr.css" />
     <script src="https://cdn.plyr.io/3.7.3/plyr.polyfilled.js"></script>
