--- a/src/views/configuracion.html
+++ b/src/views/configuracion.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-
 <head>
     <title>AutoDescripcion</title>
-    <script src="../js/renderer.js" type="module"></script>
     <script src="../js/configurar.js" type="module"></script>
     <script src="../js/ffpmeg.js" type="module"></script>
     <link rel="stylesheet" href="../style.css">
@@ -44,7 +42,7 @@
                 </div>
                 <hr>
                 <div class="voces">
-                    <h1>Voces disponibles</h1>
+                    <h1>Voces disponibles para probar</h1>
                     <div class="opcion">
                         <ul>
                             <li id="liVoces">
