--- a/src/views/formulario_descripcion.html
+++ b/src/views/formulario_descripcion.html
@@ -2,9 +2,9 @@
 
 <head>
     <title>AutoDescripcion</title>
-    <script src="../js/renderer.js"></script>
-    <script src="../js/procesa_grabacion.js"></script>
-    <script src="../js/procesa_sintesis.js"></script>
+    
+    <script src="../js/procesa_grabacion.js" type="module"></script>
+    <script src="../js/procesa_sintesis.js" type="module"></script>
     <script src="../js/gestiona_formulario.js"></script>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.3/plyr.css" />
