--- a/src/views/sube_ficheros.html
+++ b/src/views/sube_ficheros.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <head lang="es">
     <title>AutoDescripcion</title>
-    <script src="../js/renderer.js" type="module"></script>
+    <script src="../js/maneja_subida.js" type="module"></script>
     <link rel="stylesheet" href="../style.css">
     <script src="https://unpkg.com/sweetalert2@9.5.3/dist/sweetalert2.all.min.js"></script>
 </head>
 <body>
     <div class="navbar">
         <nav class="nav">
-            <a href="index.html">
-                <button class="nav-button" id="btnInicio">
-                    Inicio
-                </button>
-             <a href="info.html">
-                <button class="nav-button" id="btnInfo">
-                    Información
-                </button>
-            </a>
+             <button class="nav-button boton" id="btnInicio">
+                 Inicio
+             </button>
+             <button class="nav-button boton" id="btnInfo">
+                 Información
+             </button>
         </nav>
      </div>
      <div class="container">
