--- a/src/views/formulario_descripcion.html
+++ b/src/views/formulario_descripcion.html
@@ -5,7 +5,7 @@
     
     <script src="../js/procesa_grabacion.js" type="module"></script>
     <script src="../js/procesa_sintesis.js" type="module"></script>
-    <script src="../js/gestiona_formulario.js"></script>
+    <script id="script_gestion" src="../js/gestiona_formulario.js"></script>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.3/plyr.css" />
     <script src="https://cdn.plyr.io/3.7.3/plyr.polyfilled.js"></script>
