--- a/src/views/index.html
+++ b/src/views/index.html
@@ -56,7 +56,13 @@
                 Comienza a trabajar!
             </button>
         </div>
-        <div class="ayuda"></div>
+        <hr>
+        <div class="ayuda">
+            <h2>¿Necesitas ayuda?</h2>
+            <p>
+                Si tienes alguna duda sobre el funcionamiento de la aplicación, puedes consultar la <span id="guia">guía de uso</span>.
+            </p>
+        </div>
     </main>
 </body>
 </html>
