Error al volver

--- a/src/views/guia.html
+++ b/src/views/guia.html
@@ -2,12 +2,13 @@
 <head>
     <title>AutoDescripcion</title>
     <link rel="stylesheet" href="../style.css">
+    <script src="../js/renderer.js" type="module"></script>
 </head>
 <body>
     <div class="navbar">
        <nav class="nav">
             <button class="nav-button boton" id="btnInicio">
-                <a href="/views/index.html">Inicio</a>
+                <a href="./index.html">Inicio</a>
             </button>
             <button class="nav-button boton" id="btnInfo">
                 Información
