--- a/src/views/formulario_descripcion.html
+++ b/src/views/formulario_descripcion.html
@@ -3,9 +3,12 @@
 <head>
     <title>AutoDescripcion</title>
     
-    <script src="../js/procesa_grabacion.js"></script>
+    <!-- <script src="../js/procesa_grabacion.js"></script> -->
+
     <script src="../js/procesa_sintesis.js" type="module"></script>
+
     <script id="script_gestion" src="../js/gestiona_formulario.js" type="module"></script>
+    <script src="../js/renderer.js" type="module"></script>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.3/plyr.css" />
     <script src="https://cdn.plyr.io/3.7.3/plyr.polyfilled.js"></script>
@@ -30,7 +33,49 @@
             <div class="reproductor">
                 <video controls class="custom-player"></video>
             </div>            
-            <div class="form"></div>
+            <div class="form">
+                <div id="divNuevosSilencios">
+                    <table class="tablaSilencios" id="tablaNuevoSilencio">
+                        <tr>
+                            <th>Inicio</th>
+                            <th>Fin</th>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span class="spanNuevoSilencio">
+                                    <input type="text" class="inputNuevoSilencio">
+            
+                                    <button class="btnAddCurrentTime">
+                                        +
+                                    </button>
+                                </span>
+                            </td>
+                            <td>
+                                <span class="spanNuevoSilencio">
+                                    <input type="text" class="inputNuevoSilencio">
+                        
+                                    <button class="btnAddCurrentTime">
+                                        +
+                                    </button>
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                    <button class="botonR boton" id="btnAñadirSilencios">
+                        Añadir silencio
+                    </button>
+                </div>
+                <table id="tablaSilencios">
+                    <tr>
+                        <th>Inicio</th>
+                        <th>Fin</th>
+                        <th>Descripción</th>
+                    </tr>
+                </table>
+                <button id="btnEnviar" class="botonR">
+                    Enviar
+                </button>
+            </div>
         </div>
     </main>
 </body>
