--- a/src/views/pagina_descarga.html
+++ b/src/views/pagina_descarga.html
@@ -26,7 +26,17 @@
         <div class="bloquePrincipal">
             <div class="reproductor">
                 <video controls class="custom-player"></video>
-            </div>            
+            </div>
+            <span class="botonesVoz" id="botonesDescarga">
+                <button class="boton botonR" id="btnDescargaVideo">
+                    Descargar vídeo
+                </button>
+                <button class="boton botonR" id="btnDescargaVTT">
+                    Descargar WebVTT
+                </button>
+                <button class="boton botonR" id="btnVolver">
+                    Volver
+            </span>
         </div>
     </main>
 </body>
