--- a/src/views/formulario_descripcion.html
+++ b/src/views/formulario_descripcion.html
@@ -7,7 +7,7 @@
 
     <script src="../js/procesa_sintesis.js" type="module"></script>
 
-    <script id="script_gestion" src="../js/gestiona_formulario.js" type="module"></script>
+    <script id="script_gestion" src="../js/gestiona_formulario.js"></script>
     <script src="../js/renderer.js" type="module"></script>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.3/plyr.css" />
