--- a/src/views/configuracion.html
+++ b/src/views/configuracion.html
@@ -2,6 +2,7 @@
 <head>
     <title>AutoDescripcion</title>
     <script src="../js/configurar.js" type="module"></script>
+    <script src="../js/renderer.js" type="module"></script>
     <script src="../js/ffpmeg.js" type="module"></script>
     <link rel="stylesheet" href="../style.css">
     <script src="https://unpkg.com/sweetalert2@9.5.3/dist/sweetalert2.all.min.js"></script>
