--- a/src/views/guia.html
+++ b/src/views/guia.html
@@ -20,22 +20,29 @@
             <p>
                 Para utilizar la aplicación, sigue los siguientes pasos:
                 <hr>
-                <ol>
+                <ul style="list-style: none">
                     <li>
-                        <p>Sube un archivo de video a la plataforma.</p>
+                        <p>Sube un archivo de video a la plataforma</p>
                         <img src="../assets/subida_ficheros.PNG" alt="Subir archivo">
                     </li>
+                    <hr>
                     <li>
                         <p>Elige el modo de funcionamiento</p>
                         <img src="../assets/modo_funcionamiento.PNG" alt="Modo de funcionamiento">
                     </li>
+                    <hr>
                     <li>
-                        <p>Estable las configuraciones a tu gusto</p>
+                        <p>Establece las configuraciones a tu gusto</p>
                         <img src="../assets/configuraciones.PNG" alt="Configuraciones">
                     </li>
-                </ol>
+                    <hr>
+                    <li>
+                        <li>
+                            <p>Añade descripciones!</p>
+                        </li>
+                    </li>
+                </ul>
             </p>
-        
         </div>
     </main>
 </body>
